syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.lsspace.preference";

package com.glance.spaces.lsspace.preference;

import "com/glance/spaces/lsspace/preference/pref_option.proto";

message Team {
  string id = 1;
  PrefOption team_info = 2;
  string league_id = 3;
}